Upgrading dependencies + fixing grid overflow

--- a/src/style.css
+++ b/src/style.css
@@ -243,19 +243,19 @@
 
   .hire article {
     --gap: var(--size__l);
-    column-gap: var(--gap);
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 
     @media (min-width: 60rem) {
       --gap: calc((var(--bleed) * 3) * -1);
     }
 
-    >*:not(.process) {
-      grid-column: 1/-1;
-    }
-
     .process {
       min-inline-size: 0;
+
+      &__wrap {
+        column-gap: var(--gap);
+        row-gap: var(--size__l);
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      }
     }
   }
 
